# Highlight_Clips

./: .env.template  .gitignore  LICENSE  README.md  app.py  clipvault.desktop  clipvault.desktop.template  clipvault.service.template  clipvault.sh  hc.desktop  hc.desktop.template  hc.service.template  install.sh  pyproject.toml  requirements.txt  run.py  uninstall.sh
templates/: index.html
