[project]
name = "hc"
version = "0.1.0"
description = "A local web app to browse and play GPU Screen Recorder clips"
authors = [
    {name = "Obsydian_Falcon"}
]
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "ruff (>=0.15.22,<0.16.0)"
]
